--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/Myth.css">
 </head>
 <body>
-    <div class="full-page">
+    <div class="body">
         <div class="navbar">
             <nav>
                 <ul class="flex">
@@ -28,6 +28,14 @@
                 <button onclick="login()" class="toggle-btn">Log In</button>
                 <button onclick="register()" class="toggle-btn">Register</button>
             </div>
+                <form id="login"                
+                    class="input-group-login">
+                    <input type="text" class="input-field" placeholder="Email Id"requires>
+                    <input type="password" class="input-field" placeholder="Enter password"requires>
+                    <input type="checkbox" class="checkbox"><span>Remember password</span> <button type="submit" class="submit-btn">Log in</button>
+                </form>
+
+                
 
         </div>
 
